--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ wheels/
 # Tensorboard logging directory
 logdir/
 
+# Default dir for saved models
+saved_models/
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -106,3 +109,5 @@ ENV/
 # vim
 *.swp
 *.swo
+
+TODO
